feat: enhance access and refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ logging.pattern.console=${log.pattern.console:%green(%d{YYYY-MM-dd HH:mm:ss.SSS}
 #~~~~~ LIQUIBASE ~~~~~
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=false
+
+#~~~~~ JWT ~~~~~
+jwt.secret=3cnNbOFmGFFMzqgq54bYgKQuAzvkbd2fNXtmFl7GSBd
+jwt.access-token-expiration=120000
+jwt.refresh-token-expiration=300000
