feat: implement otp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.liquibase.enabled=false
 jwt.secret=3cnNbOFmGFFMzqgq54bYgKQuAzvkbd2fNXtmFl7GSBd
 jwt.access-token-expiration=120000
 jwt.refresh-token-expiration=300000
+
+#~~~~~ OTP ~~~~~
+otp.account-sid=AC3781293c5b45c9e181a8f62e8e47ce8c
+otp.auth-token=29c46b0e39ecb54655a62ad089cceac8
+otp.path-service-sid=VAfada6a833908ad4c7e1cb1a191b37992
