--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <version>0.13.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>11.3.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
