feat: add email verification and reset password from email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ jwt.refresh-token-expiration=300000
 otp.account-sid=AC3781293c5b45c9e181a8f62e8e47ce8c
 otp.auth-token=29c46b0e39ecb54655a62ad089cceac8
 otp.path-service-sid=VAfada6a833908ad4c7e1cb1a191b37992
+
+#~~~~~ SMTP ~~~~~
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=alfarooqtahsin@gmail.com
+spring.mail.password=mphu fkia hbtc lbms 
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
