--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,10 @@
             <version>11.3.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
